updated pom with mainclass for jar build

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,24 @@
     <groupId>org.example</groupId>
     <artifactId>HelloWorldJenkins</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.example</groupId>
+                <artifactId>HelloWorldJenkins</artifactId>
+                <version>1.0-SNAPSHOT</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClassPath>true</addClassPath>
+                            <mainClass>HelloWorldJenkins</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
